--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,7 +4,7 @@ confirmed_email_user:
   uid:                "<%= @email %>"
   email:              "<%= @email %>"
   nickname:           'stimpy'
-  provider:           'email'
+  auth_provider:           'email'
   confirmed_at:       '<%= timestamp %>'
   created_at:         '<%= timestamp %>'
   updated_at:         '<%= timestamp %>'
@@ -14,7 +14,7 @@ confirmed_email_user:
 duplicate_email_facebook_user:
   uid:                "<%= Faker::Number.number(10) %>"
   email:              "<%= @fb_email %>"
-  provider:           'facebook'
+  auth_provider:           'facebook'
   created_at:         '<%= timestamp %>'
   updated_at:         '<%= timestamp %>'
   confirmed_at:       '<%= timestamp %>'
@@ -24,7 +24,7 @@ duplicate_email_facebook_user:
 unconfirmed_email_user:
   uid:                "<%= @unconfirmed_email %>"
   email:              "<%= @unconfirmed_email %>"
-  provider:           'email'
+  auth_provider:           'email'
   created_at:         '<%= timestamp %>'
   updated_at:         '<%= timestamp %>'
   encrypted_password: <%= User.new.send(:password_digest, 'secret123') %>
@@ -35,7 +35,7 @@ unconfirmed_email_user:
 recent_unconfirmed_email_user:
   uid:                "<%= @recent_unconfirmed_email %>"
   email:              "<%= @recent_unconfirmed_email %>"
-  provider:           'email'
+  auth_provider:           'email'
   created_at:         '<%= timestamp %>'
   updated_at:         '<%= timestamp %>'
   encrypted_password: <%= User.new.send(:password_digest, 'secret123') %>
